--- a/WebServer.ipynb
+++ b/WebServer.ipynb
@@ -89,52 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "[{'id': 'https://studenthealth.charlotte.edu',\n",
-       "  'text': 'https://studenthealth.charlotte.edu\\nStudent Health at UNC Charlotte provides information and resources for students regarding COVID-19 vaccination clinics, health information, and other student health services.',\n",
-       "  'score': 0.7693413496017456,\n",
-       "  'tokens': [('https://studenthealth.charlotte.edu', -0.0032196044921875),\n",
-       "   ('Student', -0.0036637187004089355),\n",
-       "   ('Health', -0.0013418793678283691),\n",
-       "   ('at', 0.0001951456069946289),\n",
-       "   ('UNC', -0.004010677337646484),\n",
-       "   ('Charlotte', 0.0012525320053100586),\n",
-       "   ('provides', -0.002530813217163086),\n",
-       "   ('information', 0.0004977583885192871),\n",
-       "   ('and', -0.00012671947479248047),\n",
-       "   ('resources', 0.0010469555854797363),\n",
-       "   ('for', 0.0002658963203430176),\n",
-       "   ('students', -0.0034052133560180664),\n",
-       "   ('regarding', 0.010561466217041016),\n",
-       "   ('COVID-19', 0.069449782371521),\n",
-       "   ('vaccination', 0.01189732551574707),\n",
-       "   ('clinics,', -0.010615885257720947),\n",
-       "   ('health', -0.0008818507194519043),\n",
-       "   ('information,', 0.00019156932830810547),\n",
-       "   ('and', -0.0014950037002563477),\n",
-       "   ('other', -0.0010676980018615723),\n",
-       "   ('student', -0.001640915870666504),\n",
-       "   ('health', 6.031990051269531e-05),\n",
-       "   ('services.', -0.0045250654220581055)]}]"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "explain(\"covid-19\")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -151,35 +106,34 @@
      "text": [
       "WARNING: This is a development server. Do not use it in a production deployment. Use a production WSGI server instead.\n",
       " * Running on http://127.0.0.1:5000\n",
-      "Press CTRL+C to quit\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "127.0.0.1 - - [09/Apr/2024 21:30:20] \"GET / HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [09/Apr/2024 21:30:20] \"GET /style.css HTTP/1.1\" 200 -\n",
-      "127.0.0.1 - - [09/Apr/2024 21:30:21] \"POST /explain HTTP/1.1\" 200 -\n"
+      "Press CTRL+C to quit\n",
+      "127.0.0.1 - - [09/Apr/2024 21:48:22] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:48:22] \"GET /style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:48:24] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:48:50] \"POST /search HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:49:03] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:27] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:27] \"GET /style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:27] \"GET /favicon.ico HTTP/1.1\" 404 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:29] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:38] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:38] \"GET /style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:39] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:48] \"GET / HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:48] \"GET /style.css HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:51:49] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:55:02] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:55:22] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:55:45] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:56:00] \"POST /explain HTTP/1.1\" 200 -\n",
+      "127.0.0.1 - - [09/Apr/2024 21:56:16] \"POST /explain HTTP/1.1\" 200 -\n"
      ]
     }
    ],
    "source": [
     "from flask import Flask, request, jsonify\n",
     "\n",
-    "app = Flask(__name__, static_url_path='', static_folder='SearchFrontEnd')\n",
-    "\n",
-    "# Import the search page from ./SearchFrontEnd/index.html\n",
-    "search_page_html = open('./SearchFrontEnd/index.html').read()\n",
-    "\n",
-    "@app.route(\"/app.js\")\n",
-    "def serve_app_js():\n",
-    "    return app.send_static_file('app.js')\n",
-    "\n",
-    "@app.route('/')\n",
-    "def search_page():\n",
-    "    \"\"\"Render the search page.\"\"\"\n",
-    "    return search_page_html\n",
+    "app = Flask(__name__)\n",
     "\n",
     "@app.route('/search', methods=['POST'])\n",
     "def search_endpoint():\n",
@@ -200,7 +154,7 @@
     "    return jsonify({'results': results})\n",
     "\n",
     "if __name__ == '__main__':\n",
-    "    app.run()  # Enable reloader and debugger\n"
+    "    app.run()\n"
    ]
   },
   {
